# swagger.yaml
@@ -26,6 +26,10 @@ tags:
     description: >-
       Operazioni relative alla gestione dei cantieri, 
       inclusi la creazione, la visualizzazione e l'aggiornamento dei cantieri.
+  - name: Percorsi
+    description: >-
+      Operazioni relative alla gestione dei percorsi, 
+      inclusi la richiesta e la visualizzazione dei percorsi.
 
 paths:
   /auth/register:
@@ -247,7 +251,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-                
+
   /users/{id}:
     delete:
       tags:
@@ -766,6 +770,67 @@ paths:
                 $ref: "#/components/schemas/Error"
         "404":
           description: Eliminazione fallita. Nessun cantiere trovato con l'ID fornito.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "500":
+          description: Errore interno del server.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /paths/direct:
+    get:
+      tags:
+        - Percorsi
+      summary: Restituisce un percorso diretto tra due punti
+      description: >-
+        Restituisce un percorso diretto tra due punti specificati dalle coordinate geografiche.
+        Le coordinate devono essere fornite come latitudine e longitudine.
+      parameters:
+        - in: query
+          name: startLatitude
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Latitudine del punto di partenza.
+        - in: query
+          name: startLongitude
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Longitudine del punto di partenza.
+        - in: query
+          name: endLatitude
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Latitudine del punto di arrivo.
+        - in: query
+          name: endLongitude
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Longitudine del punto di arrivo.
+      responses:
+        "200":
+          description: OK. Percorso trovato.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  route:
+                    type: string
+                    description: Descrizione del percorso trovato.
+        "400":
+          description: Richiesta non valida.
           content:
             application/json:
               schema:
